[tool.poetry]
name = "image-stitcher"
version = "0.1.0"
description = ""
authors = ["naoki <u429561d@ecs.osaka-u.ac.jp>"]
readme = "README.md"
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[project]
name = "image-stitcher"
version = "0.1.0"
description = "Personal Python Template"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.3"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
ipykernel = "^6.23.2"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
pygithub = "^1.58.2"

scikit-image = "^0.24.0"
[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
taskipy = "^1.10.1"
mypy = "^0.990"
pep8-naming = "^0.12.1"
pytest = "^7.1.1"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-pyproject = "^0.1.0"

[tool.ruff]
target-version = "py39"
line-length = 119

[tool.ruff.lint]
select = ["E", "W", "F", "C"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.sphinx-pyproject]
project = "image-stitcher"
copyright = "2023, naoki"
language = "en"
package_root = "image-stitcher"
html_theme = "sphinx_rtd_theme"
todo_include_todos = true
templates_path = ["_templates"]
html_static_path = ["_static"]
extensions = [
  "sphinx.ext.autodoc",
  "sphinx.ext.viewcode",
  "sphinx.ext.todo",
  "sphinx.ext.napoleon",
]
